--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   min-height: 100vh;
-  background-image: image(images/temple.jpg);
+  background-image: url(images/temple.jpg);
   background-size:cover;
   margin: 0 auto;
   display: flex;
@@ -42,10 +42,6 @@ p {
   font-size: 50pt
 
 }
-/*h1 {
-    text-align: center;
-    position: absolute;
-}*/
 h1 {
    display:inline;
    width:1400px;
@@ -53,7 +49,6 @@ h1 {
      position: absolute;
      font-family: Monoton, cursive;
      font-size: 40pt;
-     padding; 30;
      margin: 0;
 }
 
